Tightened up the report grid.

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -19,5 +19,6 @@
 @import "primero/dashboard";
 @import "primero/password_modal";
 @import "primero/custom_forms";
+@import "primero/reports";
 @import "font-awesome-sprockets";
 @import "font-awesome";
