--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,5 +1,5 @@
 <div class="reports page-content-new row collapse" data-equalizer>
-  <div class="medium-12 columns side-tab-content-container" data-equalizer-watch>
+  <div class="medium-12 columns" data-equalizer-watch>
     <div class="report_header_content">
       <h4 class="report_name"><%= @report.name %></h4>
       <div class="report_description"><%= @report.description %></div>
@@ -10,7 +10,7 @@
       </div>
     <% end %>
     <div class="report_table_content">
-      <table class="report_table">
+      <table id="report_table">
         <%# Header %>
         <thead>
           <% report_header_rows(@report.data[:disaggregate_value_range]).each do |header_row| %>
@@ -25,8 +25,8 @@
         </thead>
         <tbody>
           <% @report.data[:aggregate_value_range][1..-1].each do |aggregate| %>
-            <tr>
-              <td><%= aggregate.to_s %></td>
+            <tr class="<%= report_row_type(aggregate) %>">
+              <td class="report_sidebar_value"><%= report_sidebar_value(aggregate) %></td>
               <% @report.data[:disaggregate_value_range][1..-1].each do |disaggregate| %>
                 <td><%= @report.data[:values][aggregate + disaggregate] %></td>
               <% end %>
