Implemented colors to the report graph.

--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -6,7 +6,7 @@
     </div>
     <% if @report.is_graph %>
       <div class="report_chart_content">
-        <canvas id="report_graph" width="600" height="400"></canvas>
+        <canvas id="report_graph" height="300px" width="1000px"></canvas>
       </div>
     <% end %>
     <div class="report_table_content">
