--- a/app/views/form_section/_field_display_basic.html.erb
+++ b/app/views/form_section/_field_display_basic.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="medium-4 columns">
-    <label class="key"><%= t(field.name, :default => field.display_name) %></label>
+    <label class="key <%= field.name %>"><%= t(field.name, :default => field.display_name) %></label>
   </div>
   <div class="medium-8 columns">
     <% if field.link_to_path.present? %>
@@ -13,7 +13,7 @@
         end
         value = I18n.t("cases.hidden_text_field_text") if formObject[:hidden_name] && field.hidden_text_field
       %>
-      <span class="value"><%= value %></span>
+      <span class="value" data-field-tags="<%= field.field_tags.present? ? field.field_tags : [] %>"><%= value %></span>
     <% end %>
   </div>
 </div>
