--- a/app/views/form_section/_text_field.html.erb
+++ b/app/views/form_section/_text_field.html.erb
@@ -8,6 +8,7 @@
   hide_text_link_action = formObject.hidden_name ? "view" : "protect"
   value = I18n.t("cases.hidden_text_field_text") if text_field.hidden_text_field && formObject.hidden_name && !formObject.new_record?
   disabled_field = (text_field.hidden_text_field && formObject.hidden_name && !formObject.new_record?) || (!text_field.editable)
+  field_tags = text_field.field_tags.present? ? text_field.field_tags : []
 %>
 <div class="row">
   <div class="medium-4 columns">
@@ -16,8 +17,10 @@
     </span>
   </div>
   <div class="medium-8 columns">
-    <%= text_field_tag name, value, :disabled => disabled_field, :id => field_id, :editable => text_field.editable %>
-    <%= link_to(hide_text_link_text, hide_text_link_text.dehumanize, :class => "hidden_text_field", :action => hide_text_link_action) if show_hide_text_link %>
+    <%= text_field_tag name, value, :disabled => disabled_field, :id => field_id, :editable => text_field.editable,
+        :data => { :field_tags => field_tags } %>
+    <%= link_to(hide_text_link_text, hide_text_link_text.dehumanize, :class => "hidden_text_field",
+        :action => hide_text_link_action) if show_hide_text_link %>
     <% if text_field.hidden_text_field && formObject.new_record? %>
       <%= check_box_tag "#{formObject.class.name.underscore.downcase}[hidden_name]", true, false %>
       <%= label_tag "#{formObject.class.name.underscore.downcase}[hidden_name]", hide_text_link_text %>
