--- a/app/views/reports/_toolbar.html
+++ b/app/views/reports/_toolbar.html
@@ -20,8 +20,8 @@
                   <li class="init_btn">
                     <%= link_to content_tag(:span, t("buttons.export")), '#', class: 'btn green-button action_btn' %>
                     <ul>
-                      <li><%= link_to t("report.export.graph"), '#' %></li>
-                      <li><%= link_to t("report.export.data"), '#' %></li>
+                      <li><%= link_to t("report.export.graph"), '#', class: 'report_export_graph', download: "#{@report.name.gsub(/\W/,'').downcase}_graph.png" %></li>
+                      <li><%= link_to t("report.export.data"), '#', class: 'report_export_data',  download: "#{@report.name.gsub(/\W/,'').downcase}_data.csv" %></li>
                     </ul>
                   </li>
                 </ul>
