--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,48 +1,52 @@
-<%= render 'toolbar' %>
+<div class="reports">
+  <%# Sticky report name and toolbar %>
+  <%= render 'toolbar' %>
 
-<div class="reports page-content-new row collapse" data-equalizer>
-  <div class="medium-12 columns" data-equalizer-watch>
-    <div class="report_header_content">
-      <div class="report_description"><%= @report.description %></div>
-    </div>
-    <% if @report.is_graph && @report.has_data? %>
-      <div class="report_chart_content">
-        <canvas id="report_graph" height="300px" width="1000px"></canvas>
+  <%# The actual report content %>
+  <div class="page-content-new row collapse" data-equalizer>
+    <div class="medium-12 columns" data-equalizer-watch>
+      <div class="report_header_content">
+        <div class="report_description"><%= @report.description %></div>
       </div>
-    <% end %>
-    <div class="report_table_content">
-      <% if @report.has_data? %>
-        <table id="report_table">
-          <thead>
-            <% report_header_rows(@report.data[:disaggregate_value_range]).each do |header_row| %>
-              <tr>
-                <th></th>
-                <% header_row.each do |headers| %>
-                  <th colspan=<%= headers[1] %>><%= headers[0] %></th>
-                <% end %>
-              </tr>
-            <% end %>
-          </thead>
-          <tbody>
-            <% @report.data[:aggregate_value_range][1..-1].each do |aggregate| %>
-              <tr class="<%= report_row_type(aggregate) %>">
-                <td class="report_sidebar_value"><%= report_sidebar_value(aggregate) %></td>
-                <% @report.data[:disaggregate_value_range][1..-1].each do |disaggregate| %>
-                  <td><%= @report.data[:values][aggregate + disaggregate] %></td>
-                <% end %>
-                <% key_padding = []
-                   if @report.data[:disaggregate_value_range]
-                     key_padding = @report.data[:disaggregate_value_range][0]
-                  end
-                %>
-                <td><%= @report.data[:values][aggregate + @report.data[:disaggregate_value_range][0]] %></td>
-              </tr>
-            <% end %>
-          </tbody>
-        </table>
-      <% else %>
-        <div><%= t 'report.no_data' %></div>
+      <% if @report.is_graph && @report.has_data? %>
+        <div class="report_chart_content">
+          <canvas id="report_graph" height="300px" width="1000px"></canvas>
+        </div>
       <% end %>
+      <div class="report_table_content">
+        <% if @report.has_data? %>
+          <table id="report_table">
+            <thead>
+              <% report_header_rows(@report.data[:disaggregate_value_range]).each do |header_row| %>
+                <tr>
+                  <th></th>
+                  <% header_row.each do |headers| %>
+                    <th colspan=<%= headers[1] %>><%= headers[0] %></th>
+                  <% end %>
+                </tr>
+              <% end %>
+            </thead>
+            <tbody>
+              <% @report.data[:aggregate_value_range][1..-1].each do |aggregate| %>
+                <tr class="<%= report_row_type(aggregate) %>">
+                  <td class="report_sidebar_value"><%= report_sidebar_value(aggregate) %></td>
+                  <% @report.data[:disaggregate_value_range][1..-1].each do |disaggregate| %>
+                    <td><%= @report.data[:values][aggregate + disaggregate] %></td>
+                  <% end %>
+                  <% key_padding = []
+                     if @report.data[:disaggregate_value_range]
+                       key_padding = @report.data[:disaggregate_value_range][0]
+                    end
+                  %>
+                  <td><%= @report.data[:values][aggregate + @report.data[:disaggregate_value_range][0]] %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        <% else %>
+          <div><%= t 'report.no_data' %></div>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
