Removed the unnecessary data-equalizer from the report view that was messing up heights.

--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -3,8 +3,8 @@
   <%= render 'toolbar' %>
 
   <%# The actual report content %>
-  <div class="page-content-new row collapse" data-equalizer>
-    <div class="medium-12 columns" data-equalizer-watch>
+  <div class="page-content-new row collapse">
+    <div class="medium-12 columns">
       <div class="report_header_content">
         <div class="report_description"><%= @report.description %></div>
       </div>
