--- a/app/views/reports/_toolbar.html
+++ b/app/views/reports/_toolbar.html
@@ -12,9 +12,6 @@
         <div class="row">
           <div class="large-12 columns">
             <ul class="inline-list">
-              <% if can?(:edit, @report) %>
-                <%= render_controls(@report) %>
-              <% end %>
               <% if controller.action_name != 'edit' %>
                 <ul id="menu" class="sf-menu">
                   <li class="init_btn">
@@ -25,6 +22,9 @@
                     </ul>
                   </li>
                 </ul>
+              <% end %>
+              <% if @report.editable? && can?(:edit, @report) %>
+                <%= render_controls(@report) %>
               <% end %>
             </ul>
           </div>
