Tidied up reports index page.

--- a/app/views/record_shared/_header.html.erb
+++ b/app/views/record_shared/_header.html.erb
@@ -1,5 +1,9 @@
 <% if model.respond_to? :by_flag %>
-    <%= render partial: 'record_shared/flag_records', locals: {model: model} %>
+  <%= render partial: 'record_shared/flag_records', locals: {model: model} %>
 <% end %>
-<%= render partial: 'record_shared/actions', locals: {model: model} %>
-<%= render partial: 'record_shared/create_button', locals: {model: model, record: record, modules: modules} %>
+<% if display_actions %>
+  <%= render partial: 'record_shared/actions', locals: {model: model} %>
+<% end %>
+<% if display_create %>
+  <%= render partial: 'record_shared/create_button', locals: {model: model, record: record, modules: modules} %>
+<% end %>
