PRIMERO-806 - QA18 - Audio Player progress in IE. PRIMERO-924 - Audio File Player - Two control panels to replay

--- a/app/assets/stylesheets/primero/av_player.scss
+++ b/app/assets/stylesheets/primero/av_player.scss
@@ -37,3 +37,20 @@
         }
     }
 }
+
+.audio {
+  audio {
+    display: none;
+  }
+}
+
+/*Only for IE10: We are not showing the jplayer progress bar on IE10 since it is not working.*/
+@media screen and (min-width:0\0) {
+ .jp-audio {
+    .jp-interface {
+      .jp-progress {
+        display: none;
+      }
+    }
+  }
+}
