--- a/app/views/form_section/edit.html.erb
+++ b/app/views/form_section/edit.html.erb
@@ -13,8 +13,9 @@
 </div>
 
 <script>
-    var show_add_field = <%= params[:show_add_field] ? 'true' : 'false' %>;
+    var show_add_field = <%= show_add_field ||= (params[:show_add_field] || false) %>;
     var field_type = "<%=j @field.type || 'text_field' %>";
+    var edit_field_mode = <%= edit_field_mode ||= false %>;
     if(show_add_field){
       $("#add_field_modal").foundation('reveal', 'open');
     }
