Made the reports editable.

--- a/app/views/reports/edit.html.erb
+++ b/app/views/reports/edit.html.erb
@@ -1,1 +1,3 @@
-<%= render partial: 'shared_configuration_resource/edit', locals: {object: @report, opts: {show_side_tab: false}} %>
+<div class="reports_form">
+    <%= render partial: 'shared_configuration_resource/edit', locals: {object: @report, opts: {show_side_tab: false}} %>
+</div>
