--- a/app/views/reports/_editable.html.erb
+++ b/app/views/reports/_editable.html.erb
@@ -1,17 +1,114 @@
 <%= resource_edit_field(object, 'name', 'name', 'text_field', true) %>
 <%= resource_edit_field(object, 'description', 'description', 'text_area') %>
+<%# Modules input %>
 <div class="row">
   <div class="medium-3 columns">
     <span class="tool-tip-label">
-      <%= form_builder.label :module_ids, t("report.module_ids"), class: 'key' %>
+      <%= form_builder.label :module_ids, t("report.modules"), class: 'key' %>
     </span>
   </div>
   <div class="medium-8 columns">
     <span class="value value_form">
-      <%= form_builder.select :module_ids, options_for_select(@current_modules.map{|p|[p.name, p.id]}), {}, {multiple: true} %>
+      <%= form_builder.select(
+            :module_ids,
+            options_for_select(
+              @current_modules.map{|p|[p.name, p.id]},
+              @report.module_ids
+            ),
+            {}, {multiple: true, :'data-placeholder' => t("fields.select_box_empty_item")}
+          )
+      %>
     </span>
   </div>
   <div class="medium-1 columns">
     <span class="required">*</span>
   </div>
+</div>
+<%# Record type input %>
+<div class="row">
+  <div class="medium-3 columns">
+    <span class="tool-tip-label">
+      <%= form_builder.label :record_type, t("report.record_type"), class: 'key' %>
+    </span>
+  </div>
+  <div class="medium-8 columns">
+    <span class="value value_form">
+      <%= form_builder.select(
+            :record_type,
+            options_for_select(
+              FormSection::RECORD_TYPES.map{|rt|[t("forms.record_types.#{rt}"), rt]},
+              @report.record_type
+            ),
+            {}, {:'data-placeholder' => t("fields.select_box_empty_item")}
+          )
+      %>
+    </span>
+  </div>
+  <div class="medium-1 columns">
+    <span class="required">*</span>
+  </div>
+</div>
+<%# Report Rows / aggregate_by %>
+<div class="row">
+  <div class="medium-3 columns">
+    <span class="tool-tip-label">
+      <%= form_builder.label :aggregate_by, t("report.aggregate_by"), class: 'key' %>
+    </span>
+  </div>
+  <div class="medium-8 columns">
+    <span class="value value_form">
+      <%= form_builder.select(
+            :aggregate_by,
+            grouped_options_for_select(
+              select_options_fields_grouped_by_form(
+                Report.all_reportable_fields_by_form(@current_modules, @report.record_type, @current_user)
+              ),
+              @report.aggregate_by
+            ),
+            {}, {multiple: true, :'data-placeholder' => t("fields.select_box_empty_item")}
+          )
+      %>
+    </span>
+  </div>
+  <div class="medium-1 columns">
+    <span class="required">*</span>
+  </div>
+</div>
+<%# Report Coulmns / disaggregate_by %>
+<div class="row">
+  <div class="medium-3 columns">
+    <span class="tool-tip-label">
+      <%= form_builder.label :disaggregate_by, t("report.disaggregate_by"), class: 'key' %>
+    </span>
+  </div>
+  <div class="medium-8 columns">
+    <span class="value value_form">
+      <%= form_builder.select(
+            :disaggregate_by,
+            grouped_options_for_select(
+              select_options_fields_grouped_by_form(
+                Report.all_reportable_fields_by_form(@current_modules, @report.record_type, @current_user)
+              ),
+              @report.disaggregate_by
+            ),
+            {}, {multiple: true, :'data-placeholder' => t("fields.select_box_empty_item")}
+          )
+      %>
+    </span>
+  </div>
+  <div class="medium-1 columns">
+    <span class="required">*</span>
+  </div>
+</div>
+<%# Report Is Graph %>
+<div class="row">
+  <div class="medium-3 columns">
+    <span class="tool-tip-label">
+      <%= form_builder.label :is_graph, t("report.is_graph"), :class=>'key inline' %>
+    </span>
+  </div>
+  <div class="medium-8 columns">
+    <%= form_builder.check_box :is_graph, {}, "true", "false" %>
+  </div>
+  <div class="medium-1 columns"> </div>
 </div>
