PRIMERO-806: Updated jplayer version. Audio player refactored.

--- a/app/assets/stylesheets/primero/av_player.scss
+++ b/app/assets/stylesheets/primero/av_player.scss
@@ -38,19 +38,10 @@
     }
 }
 
-.audio {
-  audio {
-    display: none;
-  }
-}
-
-/*Only for IE10: We are not showing the jplayer progress bar on IE10 since it is not working.*/
-@media screen and (min-width:0\0) {
- .jp-audio {
-    .jp-interface {
-      .jp-progress {
-        display: none;
-      }
+.jp-audio {
+  .jp-gui {
+    button {
+      padding: 0;
     }
   }
 }
