--- a/app/views/home/_open_incidents.html.erb
+++ b/app/views/home/_open_incidents.html.erb
@@ -2,7 +2,7 @@
  <div class="panel_header">
   <h4><%= t("dashboard.open_incidents") %></h4>
  </div>
- <div class="panel_content no-padding">
+ <div class="panel_content no-padding panel_main">
  <% if open_incidents %>
   <table cellspacing="0" cellpadding="0">
     <thead>
