--- a/app/views/home/_recently_flagged.html.erb
+++ b/app/views/home/_recently_flagged.html.erb
@@ -2,12 +2,13 @@
  <div class="panel_header">
   <h4><%= t("dashboard.recently_flagged_#{model.name.underscore}") %></h4>
  </div>
- <div class="panel_content">
+ <div class="panel_content panel_xl">
   <ul>
     <% recently_flagged.each do |r| %>
       <li>
-        <%= link_to link_dashboard_title(r.parent_record), link_dashboard_path(r.parent_record) %>
-        <p><%= r.message %></p>
+        <%= link_to link_dashboard_title(r), link_dashboard_path(r) %>
+        <p><%= r[:message] %></p>
+        <small><%= t('dashboard.flagged_by') %> <%= r[:flagged_by] %></small>
       </li>
     <% end %>
     <li><%= link_to t("dashboard.link_see_all_#{model.name.underscore}", :count => recently_flagged_count),
