--- a/cookbook/templates/default/nginx_site.erb
+++ b/cookbook/templates/default/nginx_site.erb
@@ -23,7 +23,13 @@ server {
   root <%= @current_path %>/public;
   access_log <%= @log_path %>/server.log;
   error_log <%= @log_path %>/error.log error;
+  
   client_max_body_size 50M;
+  client_body_buffer_size 128k;
+  limit_conn_zone $binary_remote_addr zone=addr:10m;
+  limit_conn addr 20;
+  limit_req_zone $binary_remote_addr zone=req_limit_per_ip:10m rate=50r/s;
+  limit_req zone=req_limit_per_ip burst=20;
 
   location ~* ^/(assets|images|javascripts|stylesheets)/ {
     gzip_static on;
