PRIMERO-693 - MRM - Create CP Case from Individual Details Incident Form

--- a/app/assets/stylesheets/primero/forms_fields.scss
+++ b/app/assets/stylesheets/primero/forms_fields.scss
@@ -320,6 +320,8 @@ fieldset {
   .grey-button {
     height: 30px;
     padding-top: 5px;
+    float: right;
+    margin-right: 10px;
   }
 }
 
@@ -342,11 +344,6 @@ fieldset {
   .header-btn-group {
     height: 35px;
     padding-right: 0;
-  }
-
-  .subform_remove {
-    float: right;
-    margin-right: 10px !important;
   }
 
   .collapse_expand_subform_header {
