--- a/app/views/children/_show_child_toolbar.html.erb
+++ b/app/views/children/_show_child_toolbar.html.erb
@@ -14,7 +14,7 @@
 <% if can? :update, child %>
     <%= ctl_create_incident_button(@child) %>
 <% end %>
-<% if controller.action_name != 'edit' %>
+<% unless ["edit", "update"].include? controller.action_name %>
 <ul id="menu" class="sf-menu">
   <li class="init_btn">
     <%= link_to content_tag(:span, t("actions.button")), '#', class: 'btn green-button action_btn' %>
