--- a/app/views/tracing_requests/_show_tracing_request_toolbar.html.erb
+++ b/app/views/tracing_requests/_show_tracing_request_toolbar.html.erb
@@ -5,7 +5,7 @@
         </div>
     </li>
 <% end %>
-<%if controller.action_name != 'edit' %>
+<% unless ["edit", "update"].include? controller.action_name %>
 <ul id="menu" class="sf-menu">
   <li class="init_btn">
     <%= link_to content_tag(:span, t("actions.button")), '#', class: 'btn green-button action_btn' %>
