--- a/app/views/incidents/_filter.html.erb
+++ b/app/views/incidents/_filter.html.erb
@@ -52,7 +52,7 @@
         { multi: true }) %>
     <% end %>
     <% if filters_to_show.include? 'Record State' %>
-      <%= build_filter_checkboxes(t("incidents.filter_by.record_state"), 'record_state', [{'true' => 'Valid'}, {'false' => 'Invalid'}], nil, nil, 'single') %>
+      <%= build_filter_checkboxes(t("incidents.filter_by.record_state"), 'record_state', [{'true' => 'Valid'}, {'false' => 'Invalid'}]) %>
     <% end %>
   </form>
   <div class="clearfix"></div>
