Added manager dashboard

--- a/app/assets/stylesheets/primero/dashboard.scss
+++ b/app/assets/stylesheets/primero/dashboard.scss
@@ -30,6 +30,10 @@
       height: 632px;
       overflow: hidden;
     }
+
+    table tbody tr:last-of-type td {
+      border-bottom: 1px dashed #ccc !important;
+    }
   }
 
   #content {
