--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -36,12 +36,15 @@
   <% if @display_cases_dashboard %>
   <div class="row collapse">
     <div id="content" class="large-9 columns">
-      <%= render 'scheduled_activities', scheduled_activities: @scheduled_activities, model:Child %>
-      <%= render 'overdue_activities', records: @overdue_activities, model:Child %>
+      <%= render 'scheduled_activities', scheduled_activities: @scheduled_activities, model: Child %>
+      <% if @display_manager_dashboard %>
+        <%= render 'caseload', records: @aggregated_case_worker_stats, model: Child %>
+      <% else %>
+        <%= render 'overdue_activities', records: @overdue_activities, model: Child %>
+      <% end %>
     </div>
     <div id="sidebar" class="large-3 columns">
-
-      <%= render 'recently_flagged', recently_flagged: @recently_flagged, recently_flagged_count: @recently_flagged_count, model:Child %>
+      <%= render 'recently_flagged', recently_flagged: @recently_flagged, recently_flagged_count: @recently_flagged_count, model: Child %>
     </div>
   </div>
   <% end %>
@@ -52,8 +55,8 @@
       <%= render 'open_incidents', open_incidents: @open_incidents %>
     </div>
     <div id="sidebar" class="large-3 columns">
-      <%= render 'new_assigned', records: @incidents, model:Incident %>
-      <%= render 'recently_flagged', recently_flagged: @incidents_recently_flagged, recently_flagged_count: @incidents_recently_flagged_count, model:Incident %>
+      <%= render 'new_assigned', records: @incidents, model: Incident %>
+      <%= render 'recently_flagged', recently_flagged: @incidents_recently_flagged, recently_flagged_count: @incidents_recently_flagged_count, model: Incident %>
     </div>
   </div>
   <% end %>
