--- a/app/views/home/_caseload.html.erb
+++ b/app/views/home/_caseload.html.erb
@@ -18,6 +18,10 @@
         </th>
         <th>
           <%= t("dashboard.missed_cases") %>
+          <span class="fa-stack">
+            <i class="fa fa-circle fa-stack-2x"></i>
+            <i class="fa fa-exclamation fa-stack-1x fa-inverse"></i>
+          </span>
         </th>
      </tr>
     </thead>
