--- a/app/views/home/_recently_flagged.html.erb
+++ b/app/views/home/_recently_flagged.html.erb
@@ -7,8 +7,7 @@
     <% recently_flagged.each do |r| %>
       <li>
         <%# Temp until ticket to clean up incident dashboard and  make incident dashboard pull from solr %>
-        <% rf = model == Incident ? r.parent_record : r; %>
-        <%= link_to link_dashboard_title(rf), link_dashboard_path(rf) %>
+        <%= link_to link_dashboard_title(r), link_dashboard_path(r) %>
         <p><%= r[:message].present? ? r[:message] : r.message %></p>
         <small><%= t('dashboard.flagged_by') %> <%= r[:flagged_by] || r.flagged_by %></small>
       </li>
