fixed body line-height

--- a/app/assets/stylesheets/primero/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/primero/foundation_and_overrides.scss
@@ -27,6 +27,7 @@ $rem-base: $base-font-size;
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  line-height: 150%;
 }
 
 $thirteen_px: 0.8125rem;
