--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -59,4 +59,15 @@
     </div>
   </div>
   <% end %>
+
+  <% if @display_gbv_incidents_dashboard %>
+  <div class="row collapse">
+    <div id="content" class="large-9 columns">
+      <%= render 'open_gbv_incidents', open_incidents: @open_gbv_incidents %>
+    </div>
+    <div id="sidebar" class="large-3 columns">
+      <%= render 'recently_flagged', recently_flagged: @gbv_incidents_recently_flagged, recently_flagged_count: @gbv_incidents_recently_flagged_count, model: Incident %>
+    </div>
+  </div>
+  <% end %>
 </div>
