--- a/app/views/form_section/_edit_fields.html.erb
+++ b/app/views/form_section/_edit_fields.html.erb
@@ -74,11 +74,11 @@
                 <% if field.type == 'subform' %>
                   <li><%= link_to t("buttons.edit_subform"), edit_form_section_path(field.subform_section_id, module_id: @primero_module) %></li>
                 <% end %>
-                <% if field.type != 'custom' %>
-                <li>
-                  <%= render :partial => "form_section/delete_button", :locals => {:field => field, :url => delete_form_section_fields_path(@form_section.unique_id),
+                <% if field.name.present? && field.type != 'custom' %>
+                  <li>
+                    <%= render :partial => "form_section/delete_button", :locals => {:field => field, :url => delete_form_section_fields_path(@form_section.unique_id),
                                                                        :warning => I18n.t("messages.warning")} %> <%= hidden_field_tag "field_name" "#{field.name}" %>
-                </li>
+                  </li>
                 <% end %>
                 <li>
                   <% if false %><a class="link_moveto"><%= t("fields.move_to") %></a><% end %>
@@ -149,10 +149,6 @@
             <%= render :partial => 'form_section/add_field', :locals => {:div_id => "field_details_tally", :fields => [{:display_name => :text_field}, {:name => :text_field}, {:help_text => :text_area}, {:tally => :tally_field}] } %>
             <%= render :partial => 'form_section/add_field', :locals => {:div_id => "field_details_tick_box", :fields => [{:display_name => :text_field}, {:name => :text_field}, {:help_text => :text_area},
                                                                                                                           {:tick_box_label => :text_field}] } %>
-            <%
-              #TODO
-              # handle hidden text fields
-            %>
           </div>
         </div>
         <div class="clearfix"></div>
