--- a/app/views/form_section/_add_name_field.html.erb
+++ b/app/views/form_section/_add_name_field.html.erb
@@ -11,10 +11,14 @@
       </div>
       <div class="large-9 medium-9 columns hello">
         <% if fld.object.type != 'custom' %>
-          <%# TODO - add pattern matching %>
-          <%# fld.text_field "name", required: '', pattern: '[a-z_]' %>
-          <%= fld.text_field "name", required: '' %>
-          <small class="error"><%= t('errors.models.field.name_format') %></small>
+          <% if @field.new? %>
+            <%= fld.text_field "name" %>
+          <% else %>
+            <%# TODO - add pattern matching %>
+            <%# fld.text_field "name", required: '', pattern: '[a-z_]' %>
+            <%= fld.text_field "name", required: '' %>
+            <small class="error"><%= t('errors.models.field.name_presence') %></small>
+          <% end %>
         <% else %>
           <div class="db_name"><%= fld.object["#{field_name}".to_sym] %></div>
         <% end %>
